--- a/package.json
+++ b/package.json
@@ -1,26 +1,24 @@
 {
-  "name": "heyue",
+  "name": "fullstackdapp",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "dev": "next dev"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "build": "^0.1.4",
-    "ganache-cli": "^6.2.5",
-    "global": "^4.3.2",
-    "install": "^0.12.2",
+    "fs-extra": "^7.0.1",
+    "ganache-cli": "^6.1.8",
     "mocha": "^5.2.0",
-    "path": "^0.12.7",
-    "python": "0.0.4",
+    "next": "^7.0.2",
+    "react": "^16.6.1",
+    "react-dom": "^16.6.1",
+    "semantic-ui-react": "^0.83.0",
     "solc": "^0.4.25",
-    "to": "^0.2.9",
-    "tools": "0.0.0",
-    "truffle-hdwallet-provider": "^1.0.3",
-    "web3": "^1.0.0-beta.36",
-    "windows": "0.0.8"
+    "truffle-hdwallet-provider": "0.0.6",
+    "web3": "^1.0.0-beta.36"
   }
 }
